--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <meta name="vviewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width" />
     <title>Demo-site DWW2</title>
-    <link href="sstyles.css" rel="stylesheet" />
+    <link href="styles.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -16,13 +16,13 @@
             <li><a href="#">CSS Properties</a></li>
             <li><a href="#">CSS Tips</a></li>
             <li><a href="#">CSS Gotchas</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#">Contacteer ons</a></li>
 <!--        <li><a href="#">CSS Tips</a></li>
             <li><a href="#">CSS Gotchas</a></li>
             <li><a href="#">Contact Us</a></li> -->
           </ul>
         </nav>
-        <h1>CSS3: The Misssing Manual</h1>
+        <h1>HTML & CSS: The Misssing Manual</h1>
       </header>
       <div class="contentWrapper">
         <div class="columnWrapper">
